# bf-discord-rbot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  caching.rs  credentials.json  docker-compose.postgres.yml  docker-compose.yml  docker-dev.yml  gcp_alert.json  gitlab-read-token.txt
.github/workflows/: build.yml  clippy.yml  rust.yml
doc/: aliases.js  search-index.js
doc/rbot_discord/: CREDENTIALS_FILE.t.html  CREDENTIALS_FILE.v.html  MAIL_INFO_FILE.t.html  MAIL_INFO_FILE.v.html  MAIL_LOCK.t.html  MAIL_LOCK.v.html  NOTIFY_EVENT_FILE.t.html  NOTIFY_EVENT_FILE.v.html  _IMPL_DESERIALIZE_FOR_Credentials.v.html  _IMPL_SERIALIZE_FOR_Credentials.v.html  all.html  constant._IMPL_DESERIALIZE_FOR_Credentials.html  constant._IMPL_SERIALIZE_FOR_Credentials.html  fn.main.html  index.html  sidebar-items.js  static.CREDENTIALS_FILE.html  static.MAIL_INFO_FILE.html  static.MAIL_LOCK.html  static.NOTIFY_EVENT_FILE.html  struct.CREDENTIALS_FILE.html  struct.Credentials.html  struct.MAIL_INFO_FILE.html  struct.MAIL_LOCK.html  struct.NOTIFY_EVENT_FILE.html
doc/rbot_discord/core/: fn.run.html  index.html  sidebar-items.js
doc/rbot_discord/core/connection/: ATTACKED.t.html  ATTACKED.v.html  CHANNEL_BOT.v.html  CHANNEL_MAILS.v.html  CHANNEL_MAIN.v.html  COMMANDS_LIST.t.html  COMMANDS_LIST.v.html  CONTAIN_MSG_LIST.t.html  CONTAIN_MSG_LIST.v.html  CONTAIN_REACTION_LIST.t.html  CONTAIN_REACTION_LIST.v.html  TAG_MSG_LIST.t.html  TAG_MSG_LIST.v.html  bot_connect.v.html  fn.bot_connect.html  fn.process_command.html  fn.process_contains.html  fn.process_tag_msg.html  fn.quit.html  fn.split_args.html  index.html  process_command.v.html  process_contains.v.html  process_tag_msg.v.html  quit.v.html  sidebar-items.js  split_args.v.html  static.ATTACKED.html  static.CHANNEL_BOT.html  static.CHANNEL_MAILS.html  static.CHANNEL_MAIN.html  (+12 more)
doc/rbot_discord/features/: fn.run.html  index.html  sidebar-items.js
doc/src/rbot_discord/: main.rs.html
docker/: Dockerfile  docker-compose.yml
fixtures/tests/: gemini-1.json  gemini-2.json
migrations/2019-11-21-212329_create_users/: up.sql
migrations/2020-01-21-122820_create_messages/: up.sql
migrations/2020-08-12-125254_airtable/: down.sql  up.sql
migrations/2020-08-12-142535_messages_date/: down.sql  up.sql
migrations/2020-08-18-155222_update_airtable_timestamp/: down.sql  up.sql
migrations/2020-08-19-101346_remove_airtable_triggered/: down.sql  up.sql
migrations/2020-08-27-082552_projects/: up.sql
migrations/2020-08-31-195902_projects_update_pined_message/: down.sql  up.sql
migrations/2020-09-07-174136_add_invites/: up.sql
migrations/2021-04-08-091555_general_storage/: down.sql  up.sql
migrations/2021-07-09-134254_messages_edits/: down.sql  up.sql
migrations/2022-07-10-070130_events/: down.sql  up.sql
procedural_macros/: Cargo.toml  macros.rs  structures.rs  util.rs
src/: macros.rs  main.rs
src/constants/: common.rs  discordids.rs  mod.rs  roles.rs
src/core/: api.rs  commands.rs  connection.rs  credentials.rs  eventhandler.rs  files.rs  gcp_alert_struct.rs  mod.rs  parse.rs  permissions.rs  process.rs  slash_command.rs  validation.rs
src/database/: connection.rs  mod.rs  models.rs  queries.rs  schema.rs
src/features/: airtable.rs  anyone.rs  archivage.rs  calendar.rs  deployment.rs  docker.rs  emoji.rs  event.rs  events.rs  frontline.rs  funny.rs  gemini.rs  githooks.rs  gitlab_preview.rs  invite_action.rs  mail.rs  mecleanup.rs  minecraft.rs  mod.rs  monitor.rs  notify.rs  ordering.rs  project_manager.rs  renaming.rs  slackimport.rs  threadcontrol.rs
(+68 files in other folders)
