[package]
name = "rbot-discord"
version = "0.3.0"
authors = ["Raphael <greefine@hotmail.fr>"]
edition = "2018"

[[bin]]
name = "rbot-discord"
path = "src/main.rs"



[dependencies]
serenity = { version = "0.10.2", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]}
serde_json = "1.0"
lazy_static = "1.4.0"
serde_derive = "1.0"
serde = "1.0"
time = "0.2.2"
rand = "0.7"
chrono = "0.4"
log = "0.4"
hyper = "0.13"
pretty_env_logger = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
failure = "0.1"
hyper-reverse-proxy = "0.4"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
strum = "0.19.2"
strum_macros = "0.17.1"
job_scheduler = "1.1.0"
ftp = "3.0.1"
procedural_macros = { path = "./procedural_macros" }



# Unused dependencies from commented code
# imap = "0.8.1"
# native-tls = "0.1"
# rifling = "0.4.0"
# bollard = "0.3"