[package]
name = "rbot-discord"
version = "0.3.0"
authors = ["Raphael <greefine@hotmail.fr>"]
edition = "2018"

[[bin]]
name = "rbot-discord"
path = "src/main.rs"

[features]
production = []

[dependencies]
procedural_macros = { path = "./procedural_macros" }
serenity = {  version= "0.10.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api"]}
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
rocket = { version="0.5.0-rc.1", features=["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.2.2"
rand = "0.8"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15.0"
strum = "0.20"
strum_macros = "0.20"
ftp = "3.0.1"
regex = "1"