[package]
name = "rbot-discord"
version = "0.3.0"
authors = ["Raphael <greefine@hotmail.fr>"]
edition = "2018"

[[bin]]
name = "rbot-discord"
path = "src/main.rs"

[features]
production = []

[dependencies]
procedural_macros = { path = "./procedural_macros" }
serenity = { version = "0.11", default-features = false, features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend",
  "unstable_discord_api",
  "chrono",
] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.5"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
dotenv = "0.15"
strum = "0.26"
strum_macros = "0.25"
regex = "1"
base64 = "0.22"
chrono-tz = "0.9"
yup-oauth2 = "9.0"
