[package]
name = "procedural_macros"
version = "0.1.0"
authors = ["greefine <greefine@hotmai.fr>"]
edition = "2018"
description = "Procedural macros for command creation for the bot."

[lib]
path = "macros.rs"
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1.0"